Bug 132084 - Skia: incorrect stamping of glyphs for rotated text
Summary: Skia: incorrect stamping of glyphs for rotated text
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords:
: 132115 (view as bug list)
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-04-13 11:09 UTC by Regina Henschel
Modified: 2020-04-15 13:50 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of faulty display of labels in vertical ruler (2.01 KB, image/png)
2020-04-13 11:09 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2020-04-13 11:09:14 UTC
Created attachment 159533 [details]
Screenshot of faulty display of labels in vertical ruler

Open Draw and enable vertical ruler. Notice that the numbers are displayed upright and therefore overlap so that they are not readable. The numbers should be turned 90° counter clockwise.

The error is only, if Skia is enabled.

I see the error in Version: 7.0.0.0.alpha0+ (x64)
Build ID: 4475bcd83aac7e033fc5250f268eb922bd471e7b
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Vulkan; VCL: win; 
Locale: de-DE (en_US); UI-Language: en-US
Calc: CL
Comment 1 V Stuart Foote 2020-04-14 21:08:23 UTC
Confirmed on Windows 10 Ent 64-bit en-US with nVidia K2000
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 6b6359abb073b4eaf7cf0783e7d783e034ccadee
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Vulkan; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: CL

RenderMethod: vulkan
Vendor: 0x10de
Device: 0xffe
API: 1.1.119
Driver: 442.296.0
DeviceType: discrete
DeviceName: Quadro K2000
Blacklisted: no

We had similar issue with bug 127325

Kind of suspect related to https://gerrit.libreoffice.org/c/core/+/91968

@Luboš?
Comment 2 V Stuart Foote 2020-04-15 13:03:38 UTC
*** Bug 132115 has been marked as a duplicate of this bug. ***
Comment 3 Commit Notification 2020-04-15 13:12:40 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2ddfa9918352a082990ba189d094bae838f82190

fix Skia glyph orientation with DirectWrite (tdf#132084)

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 V Stuart Foote 2020-04-15 13:24:48 UTC
Change to DW D2D incorrectly stamping glyphs for rotated text, e.g. labels on vertical ruler, labels on chart axis and columns, rotated text in Calc cells.