fix Skia glyph orientation with DirectWrite (tdf#132084)

LOGFONT includes info about whether a glyph should be rotated, so
we don't need to do it explicitly, but with DirectWrite apparently
this information doesn't carry over.

Change-Id: I4530511c4de7b64a6488629b380be34d4a42b3d2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/92260
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>